tests/vendor/valid/trivial/return_1.c
//expect 1
//tags: trivial
int
main
(
)
{
return
1
;
}
