tests/vendor/invalid/syntax/static_label.c
//tags: goto
// The static specifier cannot be applied to labels
int main() {
    static a:
    return 1;
}